# rivavoice-transcriber

./: .env.example  .flake8  .gitignore  BUILD_INSTRUCTIONS.md  CLAUDE.md  LICENSE  MENUBAR.md  README.md  RivaVoice.icns  app.py  build_app.sh  create_app_bundle.sh  create_icns.sh  create_standalone.py  launch.sh  launch_backend.py  launch_debug_hotkey.py  launch_fn_test.py  menubar.py  pyproject.toml  rivavoice-menubar.sh  rivavoice.py  set_hotkey_fixed.py  setup.py  setup_menubar.py  test_backend.py  test_chunk_save.py
docs/: improvement_plan.md  openai_realtime_integration_plan.md  project_catalog.md  pykeybind-usage.md  refactoring_plan.md
pyscribetranscribe/: __init__.py  openai_realtime_transcriber.py  recorder.py  transcriber.py
rivacore/: backend.py  hotkey.py  text_utils.py  transcriber.py
rivavoice/: __main__.py  config.py  constants.py  tray_manager.py  utils.py
rivavoice/.cursor/docs/: deepest-thinking.md
rivavoice/.cursor/rules/: coding-best-practices.mdc  docs-and-techstack.mdc  mcp-tool-usage.mdc
rivavoice/ui/: components.py  main_window.py  onboarding.py  recording_view.py  settings_view.py
tests/: test_config.py  test_transcribers.py
v2/: README.md  check_permissions.py  debug_hotkey.py  demo_backend.py  launch_hotkey_fixed.py  launch_hotkey_setter.py  launch_terminal.sh  requirements.txt  set_hotkey.py  test_chunked.py  test_chunked_terminal.sh  test_crash.py  test_fn_key.py
v2/rivacore/: __init__.py  audio.py  backend.py  chunked_audio.py  config.py  permissions.py
