[build-system]
requires = ["setuptools>=42", "wheel", "py2app>=0.28"] # Added py2app
build-backend = "setuptools.build_meta"

[project]
name = "RivaVoice"
version = "1.0.0" # Match constants.py / setup.py
description = "Hotkey-activated real-time and file-based transcription for macOS"
readme = "README.md"
requires-python = ">=3.9" # Specify a reasonable minimum Python version
license = { text = "MIT License" } # Assuming MIT, update if different
authors = [
    { name = "Your Name / Org", email = "your@email.com" }, # Placeholder
]
classifiers = [
    "Development Status :: 4 - Beta", # Example
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License", # Match license text
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]
# Add project URLs if available (e.g., homepage, repository)
# urls = { Homepage = "...", Repository = "..." }

dependencies = [
    "PyQt6>=6.0",
    "pyaudio", # Consider platform markers if needed
    "requests",
    "pyperclip",
    "openai",
    "websockets",
    "python-dotenv",
    "pykeybindmanager>=0.2.2", # Specify minimum version if known
    "aiohttp",
    # macOS specific via pykeybindmanager/pynput:
    # 'pynput>=1.7.0',
    # 'pyobjc-framework-ApplicationServices>=8.0',
    # 'pyobjc-framework-Quartz>=8.0',
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "pytest-mock", # Useful for mocking tests
    "pytest-asyncio", # For testing async code
]

# py2app configuration might still need setup.py or specific tool config
# [tool.py2app]
# ...